--- a/css/3번째.css
+++ b/css/3번째.css
@@ -12,7 +12,7 @@ body {
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
   background-color: #fff;
   min-height: 100vh;
@@ -302,4 +302,9 @@ body {
 select {
   padding: 6px 10px;
   font-size: 1rem;
+}
+iframe {
+  width: 100%; /* 필요에 따라 크기 조정 */
+  height: 2000px; /* 필요에 따라 크기 조정 */
+  border: none;
 }
